Hotfix: z-index issue on marker popup

--- a/src/components/Map/marker/style.scss
+++ b/src/components/Map/marker/style.scss
@@ -15,6 +15,7 @@
 
   > div {
     position: absolute;
+    z-index: 20;
     padding: 10px;
     min-width: 200px;
     min-height: 50px;
